Fixed font size to address font bleed issue

--- a/primary-view-element/primary-view-element.css
+++ b/primary-view-element/primary-view-element.css
@@ -83,7 +83,7 @@ qr-code-element {
   cursor: pointer;
   width: 25%;
   
-  font-size: 60px;
+  font-size: 2rem;
 }
 
 /* Change background color of buttons on hover */
